--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ header {
     color: blueviolet;
 }
 
-.container {
+.search-container {
     border: 1px solid black;
     border-radius: 100px;
     display: flex;
@@ -59,6 +59,7 @@ header {
     max-width: 700px;
     display: flex;
     align-items: center;
+    font-size: 1rem;
 }
 
 .search-bar input {
@@ -67,6 +68,12 @@ header {
     outline: none;
     margin-right: 30px;
     margin-left: 10px;
+}
+
+
+input,
+input::placeholder {
+    font: 1.4rem sans-serif;
 }
 
 .search-bar button img {
@@ -93,11 +100,13 @@ header {
     margin-top: 30px;
     margin-left: 16px;
     margin-right: 16 px;
+    height: fit-content;
 }
 
 .login-link, .signup-link {
     text-decoration: none;
     margin-left: 10px;
+    height: fit-content;
 }
 
 .login {
@@ -134,6 +143,10 @@ header {
 .signup:hover {
     opacity: 1;
     animation-duration: 0.2s;
+}
+
+.language-link {
+    height: fit-content;
 }
 
 .language-link img {
@@ -206,12 +219,13 @@ main {
     font-size: 2rem;
 }
 
-.courses {
-    display: flex;
-    flex-wrap: wrap;
+.nav-tabs, .nav-item {
+    border: 0px solid white;
 }
 
-.courses a {
+.nav-link {
+    border: 0px solid white;
+
     opacity: .6;
     text-decoration: none;
     font-weight: 1000;
@@ -220,16 +234,19 @@ main {
     color: black;
 }
 
-.courses a:hover {
+.nav-link:hover {
     opacity: 1;
-    animation-duration: .2s;
+    border: 0px solid white;
+    color: black;
 }
 
-.courses .python { /*choosing python by default but this should be modified later*/
+.nav-tabs .nav-link.active {
     opacity: 1;
+    color: black;
+    border: 0px solid white;
 }
 
-.python-tab {
+.tab-content {
     display: flex;
     flex-direction: column;
     border: 1px solid black;
@@ -240,29 +257,29 @@ main {
     padding: 30px;
 }
 
-.python-tab h1 {
+.tab-content h1 {
     font-size: 2.5rem;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
 }
 
-.python-tab .firstp {
+.tab-content .firstp {
     font-size: 1.5rem;
     width: 70%;
 }
 
-.explore-python {
+.explore {
     width: fit-content;
     text-decoration: none;
     margin-top: 10px;
 }
 
-.explore-python div:hover {
+.explore div:hover {
     background-color: whitesmoke;
     animation-duration: .2s;
 }
 
-.explore-python div {
+.explore div {
     border: 1px solid black;
     width: fit-content;
     padding: 10px;
@@ -271,20 +288,35 @@ main {
     color: black;
 }
 
-.python-courses {
+.courses {
     margin-top: 30px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
 
-.python-courses a {
+.courses a {
     text-decoration: none;
     color: black;
     margin-right: 20px;
     display: flex;
     flex-direction: column;
     width: 230px;
+}
+
+.cards-wrapper {
+    display: flex;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+    background-color: black;
+    opacity: 1;
+    width: 6vh;
+    height: 6vh;
+    border-radius: 50%;
+    top: 30%;
+    transform: translateY(-80%);
 }
 
 .course img {
@@ -328,7 +360,7 @@ main {
     width: fit-content;
     font-weight: 600;
     font-size: 1.1rem;
-    margin-top: 5px;
+    margin: 5px 0px;
     color: black;
 }
 
@@ -348,6 +380,30 @@ main {
         display: flex;
         align-items: right;
     }
+}
+
+.top-categories-container {
+    width: 80%;
+    position: relative;
+    right: 10%;
+    left: 10%;
+    padding: 0.1rem;
+}
+
+.top-categories-cards {
+    padding: 0.1rem;
+}
+
+.img-wrapper {
+    padding: .1rem;
+    width:100%;
+    overflow:hidden;
+}
+
+.category img:hover{
+    transition: transform .2s;
+    transform:scale(1.1);
+    cursor: pointer;
 }
 
 .hide {
